crates/pink/pink-extension/src/snapshots/pink_extension__tests__event_topics-2.snap
---
source: crates/pink/pink-extension/src/lib.rs
expression: "super::OspMessage::event_topic()"

---
[
    80,
    112,
    104,
    97,
    108,
    97,
    46,
    109,
    113,
    46,
    111,
    115,
    112,
    95,
    109,
    101,
    115,
    115,
    97,
    103,
    101,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
